--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "api": "json-server ./src/services/server.json --host 192.168.2.102 --port 3333 --delay 700 "
   },
   "dependencies": {
     "@expo-google-fonts/jost": "^0.2.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "json-server": "^0.17.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
